syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hacom.orderprocessing.infrastructure.grpc";
option java_outer_classname = "OrderProto";

package order;

// ----- Request -----
message OrderItemList {
  repeated string items = 1;
}

message CreateOrderRequest {
  string orderId = 1;
  string customerId = 2;
  string customerPhoneNumber = 3;
  OrderItemList items = 4;
}

// ----- Response -----
message CreateOrderResponse {
  string orderId = 1;
  string status = 2;
}

// ----- Service -----
service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}